Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="abiaoggithubio" class="anchor" href="#abiaoggithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>abiaog.github.io</h1>
+<a id="abiaogs-pageabiaoggithubio" class="anchor" href="#abiaogs-pageabiaoggithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>aBiaog's Page(abiaog.github.io)</h1>
 
-<p>aBiaog Blog</p>
+<h2>
+<a id="vim" class="anchor" href="#vim" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VIM</h2>
+
+<ul>
+<li><a href="posts/vim_introduce.md">The world of plain text -- vim and more</a></li>
+</ul>
       </section>
     </div>
 
