--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <a id="vim" class="anchor" href="#vim" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VIM</h2>
 
 <ul>
-<li><a href="posts/vim_introduce.md">The world of plain text -- vim and more</a></li>
+<li><a href="post/vim_introduce.md">The world of plain text -- vim and more</a></li>
 </ul>
       </section>
     </div>
