--- a/index.html
+++ b/index.html
@@ -1,52 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Abiaog.GitHub.io : aBiaog Blog">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Abiaog.GitHub.io</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/abiaog">View on GitHub</a>
-
-          <h1 id="project_title">Abiaog.GitHub.io</h1>
-          <h2 id="project_tagline">aBiaog Blog</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a id="abiaogs-pageabiaoggithubio" class="anchor" href="#abiaogs-pageabiaoggithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>aBiaog's Page(abiaog.github.io)</h1>
-
-<h2>
-<a id="vim" class="anchor" href="#vim" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VIM</h2>
-
-<ul>
-<li><a href="post/vim_introduce.md">The world of plain text -- vim and more</a></li>
-</ul>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
+Hello World
